deploy/k8s/planka.yaml
apiVersion: v1
kind: Service
metadata:
  name: planka-host
  namespace: default
spec:
  ports:
    - port: 3010
---
apiVersion: v1
kind: Endpoints
metadata:
  name: planka-host
  namespace: default
subsets:
  - addresses:
      - ip: 66.94.113.102
    ports:
      - port: 3010
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: planka
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - fs2-usw.delightvoip.com
      secretName: planka-tls
  rules:
    - host: fs2-usw.delightvoip.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: planka-host
                port:
                  number: 3010
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: planka-redirect
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: fs2-usw.delightvoip.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: planka-host
                port:
                  number: 3010
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: default
spec:
  redirectScheme:
    scheme: https
    permanent: true
